--- a/style.css
+++ b/style.css
@@ -15,8 +15,23 @@
 
 
 body{
-    background:rgb(243, 243, 243);
+    background:rgb(197, 197, 197);
+
 }
+.chatbox::-webkit-scrollbar  {
+    width: 10px;               /* width of the entire scrollbar */
+  }
+  
+  .chatbox::-webkit-scrollbar-track {
+      background-color: rgb(186, 186, 186);    /* color of the scroll thumb */
+      border-radius: 20px;       /* roundness of the scroll thumb */
+    }
+    
+    .chatbox::-webkit-scrollbar-thumb {
+        background: rgb(111, 111, 111);        /* color of the tracking area */
+        border-radius: 20px;       /* roundness of the scroll thumb */
+    /* border: 3px solid rgb(111, 111, 111);;  creates padding around scroll thumb */
+  }
 
 
 .chatbot{
@@ -65,6 +80,8 @@ body{
 
 .chatbox .chat{
     display: flex;
+    letter-spacing: 1.7px;
+
 }
 
 .chatbox .incoming span{
@@ -89,7 +106,7 @@ body{
     max-width: 75%;
     white-space: pre-wrap;
     color: #fff;
-    font-size: 0.95rem;
+    font-size: 1rem;
     padding: 12px 16px;
     border-radius: 10px 10px 0px 10px;
     background-color: rgb(115, 115, 115);
@@ -127,6 +144,8 @@ body{
     border:none;
     outline: none;
     font-size: 1rem;
+    /* font-size: 1.3rem; */
+    letter-spacing: 1.7px;
     resize: none;
     padding: 16px 15px 16px 0px;
 }
@@ -145,3 +164,20 @@ body{
     
 }
 
+
+
+
+.chat-input-text::-webkit-scrollbar {
+    width: 10px;               /* width of the entire scrollbar */
+  }
+  
+  .chat-input-text::-webkit-scrollbar-track {
+      background-color: rgb(186, 186, 186);    /* color of the scroll thumb */
+      border-radius: 20px;       /* roundness of the scroll thumb */
+    }
+    
+    .chat-input-text::-webkit-scrollbar-thumb {
+        background: rgb(111, 111, 111);        /* color of the tracking area */
+        border-radius: 20px;       /* roundness of the scroll thumb */
+    /* border: 3px solid rgb(111, 111, 111);;  creates padding around scroll thumb */
+  }
